Added uname command to shell

--- a/README.html
+++ b/README.html
@@ -248,6 +248,9 @@ should be seperated by spaces/tabs, empty lines and lines beginning with a hash
 	Search for files matching the pattern 'filename', filename may include the wildcard characters * or ?, if
 	directory is ommited, the current directory will be searched.
 	</li>
+	<li><b>uname</b><br />
+	Show information about the kexec-loader kernel.
+	</li>
 	<li><b>exit</b>
 	<br />Leave the shell and go back to the menu.
 	</li>
