--- a/README.html
+++ b/README.html
@@ -31,18 +31,10 @@ color: red;
 
 <body>
 <h1>kexec-loader manual</h1>
-<p>Version: 1.6</p>
+<p>Version: 1.6.1</p>
 <p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
 <ul>
-	<li><a href="#s1">1. Compilation</a>
-	<ul>
-		<li><a href="#s1s1">1.1. Introduction</a></li>
-		<li><a href="#s1s2">1.2. New in kexec-loader 1.6</a></li>
-		<li><a href="#s1s3">1.3. Requirements</a></li>
-		<li><a href="#s1s4">1.4. Build Instructions</a></li>
-		<li><a href="#s1s5">1.5. Creating a Disk Image</a></li>
-	</ul>
-	</li>
+	<li><a href="#s1">1. Introduction</a></li>
 	<li><a href="#s2">2. Usage</a>
 	<ul>
 		<li><a href="#s2s1">2.1. Configuration File</a></li>
@@ -52,60 +44,29 @@ color: red;
 		<li><a href="#s2s5">2.5. Kernel Modules</a></li>
 	</ul>
 	</li>
-	<li><a href="#s3">3. Support</a>
+	<li><a href="#s3">3. Compiling</a>
 	<ul>
-		<li><a href="#s3s1">3.1. Website</a></li>
-		<li><a href="#s3s2">3.2. Developer</a></li>
+		<li><a href="#s3s1">3.1. Introduction</a></li>
+		<li><a href="#s3s2">3.2. Compiling</a></li>
+		<li><a href="#s3s3">3.3. Creating a Disk Image</a></li>
+	</ul>
+	</li>
+	<li><a href="#s4">4. Support</a>
+	<ul>
+		<li><a href="#s4s1">4.1. Website</a></li>
+		<li><a href="#s4s2">4.2. Developer</a></li>
 	</ul>
 	</li>
 </ul>
 
-<h2><a name="s1">1. Compilation</a></h2>
-<h3><a name="s1s1">1.1. Introduction</a></h3>
-<p>kexec-loader is a boot loader which loads a Linux kernel, then displays a GRUB-like menu so you can select a kernel to boot
-using kexec. It is designed for systems where the BIOS does not support booting from some devices (e.g. your kernel is on a USB memory key which the BIOS does not support).</p>
+<h2><a name="s1">1. Introduction</a></h2>
 <p>
-If you have downloaded one of the pre-built disk images, you do not need to read
-the rest of this section, and you can skip to Section 2. A pre-made disk image
-is probably more suitable to the end user in most cases, as the provided image
-supports most hardware and is pre-compiled. You can obtain it from the project's
-webpage, along with kernel modules for that version.
+kexec-loader is a Linux based bootloader that uses kexec to start the kernel of your choice. It fits on a 1.44MB floppy, supports most block devices supported by Linux and is easy to use. kexec-loader supports reading GRUB configuration files, this allows kexec-loader to be used as a drop-in replacement for GRUB by merely setting the GRUB installation path.
 </p>
-<h3><a name="s1s2">1.2. New in kexec-loader 1.6</a></h3>
-<p>A summary of the new features in this release of kexec-loader is below. For a more detailed changelog, please see the ChangeLog file.</p>
-<ul>
-<li>Upgraded kexec-tools to version 2.0.0</li>
-<li>Updated console code to work on serial consoles</li>
-<li>Rewrote shell input code for better line editing</li>
-<li>Changed module loading behaviour</li>
-</ul>
-<h3><a name="s1s3">1.3. Requirements</a></h3>
-<p>To build kexec-loader, you require the following tools.</p>
-<ul>
-  <li>gcc C compiler</li>
-  <li>bourne shell</li>
-  <li>make</li>
-  <li>binutils</li>
-  <li>coreutils</li>
-  <li>cpio</li>
-  <li>wget</li>
-  <li><i>Optional but highly recommended:</i> uclibc toolchain</li>
-  <li>A bootloader (such as syslinux)</li>
+<p>
+The kexec-loader project site has prebuilt disk images available for download, unless you have a very good reason for compiling from source, this is the best option, as the process for building disk images is complicated and requires an understanding of the Linux boot process.
+</p>
 
-</ul>
-<p>kexec-tools is included and built as part of the build process.</p>
-<h3><a name="s1s4">1.4. Build Instructions</a></h3>
-<p>In order to build kexec-loader, you first need a Linux kernel with support for the hardware you want to boot from. This kernel will need fit onto the device that will be used to boot, with sufficient space left for other files that will need to be on the device (such as kexec-loader itself and the boot loader).</p>
-<p>Once you have your kernel, simply run "make" from the root of the kexec-loader source to build the kexec-loader binary. This will include downloading and building kexec-tools. It is recommended that you build a uclibc toolchain prior to this, then building kexec-loader using it, as this will make the resulting file smaller. To use a uclibc toolchain, do "HOST=i386-linux-uclibc make" instead of make.</p>
-<p>Then run mkinitramfs.sh from the root directory of the distribution to build an initramfs containing kexec-loader.</p>
-<h3><a name="s1s5">1.5. Creating a Disk Image</a></h3>
-<p>Once you have a kernel and initramfs, you can then build a disk image. There are two ways to assemble the disk, which are below.</p>
-<ol>
-<li>Embed your initramfs inside your kernel (this is what is done by the prebuilt images) using menuconfig. You will have to rebuild your kernel.</li>
-
-<li>Just load it as an initramfs along with your kernel with a boot loader.</li>
-</ol>
-<p>Regardless of the method you choose, you will need a bootloader such as syslinux. Build your image using your favourite method (such as using dd to produce an empty floppy image, formatting it then loop mounting it), put the kernel and initramfs (if any) on the disk, along with any boot loader configuration, install the boot loader and your disk is prepared.</p>
 <h2><a name="s2">2. Usage</a></h2>
 <h3><a name="s2s1">2.1. Configuration File</a></h3>
 <p>
@@ -280,14 +241,60 @@ available on the downloads page of the project site, named somthing like
 modules-XXX.tar.gz, make sure you download the correct modules for your kernel.
 </p>
 
-<h2><a name="s3">3. Support</a></h2>
-<h3><a name="s3s1">3.1. Website</a></h3>
+<h2><a name="s3">3. Compiling</a></h2>
+<h3><a name="s3s1">3.1. Introduction</a></h3>
+<p>
+This section explains how to build a kexec-loader disk image, you must build a kernel and toolchain which is not explained in this document. I recommend using uClibc as a toolchain as glibc is too big to fit on a floppy, you must also use Linux 2.6.13 or above, as earlier versions did not have the kexec syscalls.
+</p>
+<p>
+You will need the following to compile kexec-loader:
+</p>
+<ul>
+	<li>GNU C compiler</li>
+	<li>Linux kernel headers</li>
+	<li>GNU Make</li>
+	<li>cpio archiver</li>
+	<li>Toolchain</li>
+	<li>zlib with headers</li>
+</ul>
+
+<h3><a name="s3s2">3.2. Compiling</a></h3>
+<p>
+To compile kexec-loader, use the following commands:
+</p>
+<p style="font-family: monospace;">
+HOST=i386-linux-uclibc make<br />
+./mkinitramfs.sh initramfs.cpio
+</p>
+<p>
+The first command assumes your toolchain was built to target i386-linux-uclibc, in which case the various tools such as gcc can be invoked as i386-linux-uclibc-gcc, ensure you set this to the correct target, or the compile may fail, or end up being compiled with the wrong toolchain. You must also make sure that the toolchain bin directories are included in $PATH.
+</p>
+<p>
+The first command compiles kexec-loader, downloads, patches and compiles kexec-tools, then links them as the binaries src/kexec-loader and src/kexec-loader.static, which are dynamically and statically linked respectively. The second command creates a Linux initramfs archive as initramfs.cpio, the initramfs contains kexec-loader.static as /init, some device nodes and empty directories.
+</p>
+<h3><a name="s3s3">3.3. Creating a Disk Image</a></h3>
+<p>
+This is a fairly generic floppy building method:
+</p>
+<ol>
+	<li>Create a 1.44MB file and format using mkfs.vfat</li>
+	<li>Install and configure SYSLINUX on the floppy image</li>
+	<li>Copy a UPX compressed kernel image to the floppy image</li>
+	<li>Copy misc. files (kexec-loader.conf, README, etc)</li>
+</ol>
+<p>
+Notes:<br />
+I embed the kexec-loader initramfs inside the kernel to make it take a little less space, you can also put the initramfs on the floppy image as a seperate file if your chosen bootloader is capable of loading an initrd/initramfs for the kernel, the UPX compression step is also optional.
+</p>
+
+<h2><a name="s4">4. Support</a></h2>
+<h3><a name="s4s1">4.1. Website</a></h3>
 <p>
 For information on kexec-loader, including current development and latest
 releases, please see the project <a href="http://www.solemnwarning.net/kexec-loader/">website</a>.
 </p>
 
-<h3><a name="s3s2">3.2. Developer</a></h3>
+<h3><a name="s4s2">4.2. Developer</a></h3>
 <p>
 The developer of kexec-loader, Daniel Collins (aka solemnwarning), can often be
 found on the Freenode IRC network. To contact solemnwarning, you can use the
