--- a/README.html
+++ b/README.html
@@ -6,24 +6,24 @@
 <style type="text/css">
 <!--
 body {
-font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
-h1 {
-font-size: xx-large;
-color: #0099FF;
+h1, h1 a:hover {
+	font-size: xx-large;
+	color: #0099FF;
 }
-h2 {
-color: #0066FF;
+h2, h2 a:hover {
+	color: #0066FF;
 }
-h3 {
-color: #0033CC;
+h3, h3 a:hover {
+	color: #0033CC;
 }
-a {
-text-decoration: none;
-color: blue;
+a:link, a:visited {
+	text-decoration: none;
+	color: blue;
 }
 a:hover {
-color: red;
+	color: red;
 }
 -->
 </style>
