--- a/README.html
+++ b/README.html
@@ -31,8 +31,8 @@ a:hover {
 
 <body>
 <h1>kexec-loader manual</h1>
-<p>Version: 1.6.1</p>
-<p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
+<p>Version: 1.6.2</p>
+<p>&copy; 2007-2009 Daniel Collins<br />&copy; 2008 Philip Kent</p>
 <ul>
 	<li><a href="#s1">1. Introduction</a></li>
 	<li><a href="#s2">2. Usage</a>
@@ -189,6 +189,9 @@ Where parameters are shown in &lt;angled brackets&gt;, they are required for tha
 	</li>
 	<li><b>reset-vga</b><br />
 	Enable the --reset-vga option, which fixes some graphics problems.
+	</li>
+	<li><b>boot</b><br />
+	Boot the system.
 	</li>
 	<li><b>disks</b><br />
 	Display a list of disks and partitions which have been detected by Linux.
